--- a/retrofit/build.gradle
+++ b/retrofit/build.gradle
@@ -19,6 +19,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+    // добавил для парсинга приходящей Hello World! строки
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
 
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
