--- a/api-school/build.gradle
+++ b/api-school/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.7.4'
     id 'io.spring.dependency-management' version '1.0.14.RELEASE'
     id 'java'
+    id "io.freefair.lombok" version "6.6.1"
 }
 
 //group 'org.art'
@@ -13,13 +14,13 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
+//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
+//    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
 
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation 'org.springframework.boot:spring-boot-starter-web:2.7.4'
-    implementation 'org.springframework.boot:spring-boot-devtools:2.7.4'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+//    implementation 'org.springframework.boot:spring-boot-devtools:2.7.4'
 }
 
 test {
