--- a/retrofit/build.gradle
+++ b/retrofit/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id "io.qameta.allure" version "2.11.0"
+    id "io.freefair.lombok" version "6.6.1"
 }
 
 group 'org.art'
@@ -10,25 +12,21 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
     testImplementation 'org.assertj:assertj-core:3.23.1'
 
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
-    implementation 'com.google.code.gson:gson:2.9.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
+    implementation 'com.google.code.gson:gson:2.10'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
     // добавил для парсинга приходящей Hello World! строки
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+    implementation 'org.apache.httpcomponents.client5:httpclient5:5.1.3'
 
-    compileOnly 'org.projectlombok:lombok:1.18.24'
-    annotationProcessor 'org.projectlombok:lombok:1.18.24'
-    testCompileOnly 'org.projectlombok:lombok:1.18.24'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
-
-    implementation 'io.qameta.allure:allure-java-commons:2.19.0'
+    implementation 'io.qameta.allure:allure-java-commons:2.20.0'
 }
 
 test {
