feature: retrofit-services Done

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,11 @@ rootProject.name = 'api-tools-at'
 include 'rest-assured'
 include 'retrofit'
 include 'api-school'
-include 'api-school'
+include 'common'
+include 'common:utils'
+findProject(':common:utils')?.name = 'utils'
+include 'common:entity'
+findProject(':common:entity')?.name = 'entity'
+include 'common:constants'
+findProject(':common:constants')?.name = 'constants'
 
