--- a/rest-assured/build.gradle
+++ b/rest-assured/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id "io.qameta.allure" version "2.11.0"
+    id "io.freefair.lombok" version "6.6.1"
 }
 
 group 'org.art'
@@ -11,21 +12,28 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.1'
-    testImplementation 'org.assertj:assertj-core:3.23.1'
+    implementation project(':common:utils')
+    implementation project(':common:entity')
 
-    implementation 'io.qameta.allure:allure-java-commons:2.19.0'
-    implementation 'io.rest-assured:rest-assured:5.2.0'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
 
-    compileOnly 'org.projectlombok:lombok:1.18.24'
-    annotationProcessor 'org.projectlombok:lombok:1.18.24'
-    testCompileOnly 'org.projectlombok:lombok:1.18.24'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+    implementation 'io.qameta.allure:allure-java-commons:2.21.0'
+    implementation 'io.rest-assured:rest-assured:5.3.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
 }
 
 test {
     useJUnitPlatform()
 }
+
+//task launchByTagTest(type: Test) {
+//    useJUnitPlatform {
+//        includeTags("registration-api", "documents-api")
+//    }
+//    systemProperty 'junit.jupiter.extensions.autodetection.enabled', true
+//}
+
+compileJava.dependsOn(clean)
