--- a/retrofit/build.gradle
+++ b/retrofit/build.gradle
@@ -12,23 +12,37 @@ repositories {
 }
 
 dependencies {
+    implementation project(':common:utils')
+    implementation project(':common:entity')
+    implementation project(':common:constants')
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
-    testImplementation 'org.assertj:assertj-core:3.23.1'
 
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
-    implementation 'com.google.code.gson:gson:2.10'
+
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+
     // добавил для парсинга приходящей Hello World! строки
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
-    implementation 'org.apache.httpcomponents.client5:httpclient5:5.1.3'
+    implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
 
-    implementation 'io.qameta.allure:allure-java-commons:2.20.0'
+    implementation 'io.qameta.allure:allure-java-commons:2.21.0'
 }
 
 test {
     useJUnitPlatform()
 }
+
+//task launchByTagTest(type: Test) {
+//    useJUnitPlatform {
+//        includeTags("registration-api", "documents-api")
+//    }
+//    systemProperty 'junit.jupiter.extensions.autodetection.enabled', true
+//}
+
+compileJava.dependsOn(clean)
