--- a/retrofit/build.gradle
+++ b/retrofit/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
 
+    implementation 'ch.qos.logback:logback-classic:1.4.6'
+
     // добавил для парсинга приходящей Hello World! строки
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
@@ -45,4 +47,4 @@ test {
 //    systemProperty 'junit.jupiter.extensions.autodetection.enabled', true
 //}
 
-compileJava.dependsOn(clean)
+//compileJava.dependsOn(clean)
