--- a/retrofit/src/test/resources/allure.properties
+++ b/retrofit/src/test/resources/allure.properties
@@ -1,3 +1,3 @@
 allure.results.directory=build/allure-results
-allure.link.issue.pattern=https://jira.moscow.alfaintra.net/browse/{}
-allure.link.tms.pattern=https://jira.moscow.alfaintra.net/browse/{}
+allure.link.issue.pattern=https://google/browse/{}
+allure.link.tms.pattern=https://google/browse/{}
