--- a/api-school/build.gradle
+++ b/api-school/build.gradle
@@ -15,6 +15,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    // для спринга версии 2
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.3'
+
+    // для спринга версии 3
+//    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 }
 
 test {
