feature: retrofit to Spring

--- a/retrofit/build.gradle
+++ b/retrofit/build.gradle
@@ -1,6 +1,8 @@
 plugins {
-    id 'java'
+    id 'org.springframework.boot' version '2.7.10'
+    id 'io.spring.dependency-management' version '1.0.14.RELEASE'
     id "io.qameta.allure" version "2.11.0"
+    id 'java'
     id "io.freefair.lombok" version "6.6.1"
 }
 
@@ -16,9 +18,12 @@ dependencies {
     implementation project(':common:entity')
     implementation project(':common:constants')
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
+    implementation 'org.springframework.boot:spring-boot-starter'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params'
 
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
@@ -27,7 +32,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
 
-    implementation 'ch.qos.logback:logback-classic:1.4.6'
+    implementation 'ch.qos.logback:logback-classic'
 
     // добавил для парсинга приходящей Hello World! строки
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
