--- a/common/entity/build.gradle
+++ b/common/entity/build.gradle
@@ -11,6 +11,8 @@ repositories {
 }
 
 dependencies {
+    implementation project(path: ':common:utils')
+
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
 }
 
