--- a/common/utils/build.gradle
+++ b/common/utils/build.gradle
@@ -11,8 +11,13 @@ repositories {
 }
 
 dependencies {
+    implementation project(path: ':common:constants')
+
     implementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     implementation 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
 }
 
 test {
