--- a/common/utils/build.gradle
+++ b/common/utils/build.gradle
@@ -18,6 +18,11 @@ dependencies {
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.2'
+
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'org.springframework:spring-core:5.3.27'
+    implementation 'commons-io:commons-io:2.11.0'
 }
 
 test {
