feature: swaggerSchemas done. TeacherController done

--- a/api-school/src/main/resources/application.properties
+++ b/api-school/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port=8083
 server.servlet.contextPath=/v1/api
+
+school.openapi.dev-url=http://localhost:8083/v1/api/
+school.openapi.prod-url=http://localhost:8083/v1/api/
